Refactor + account DTO conversion.
