# src/main/java/org/jsprt/assignment/controller/AccountsApi.java
@@ -1,7 +1,6 @@
 package org.jsprt.assignment.controller;
 
 import io.swagger.annotations.*;
-import org.jsprt.assignment.model.Accounts;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -19,16 +18,16 @@ import java.util.List;
 @RestController
 public class AccountsApi {
 
-    @ApiOperation(value = "Get all accounts for user", nickname = "getAccounts", notes = "Get all accounts for user", response = Accounts.class, responseContainer = "List", tags = {"accounts",})
+    @ApiOperation(value = "Get all accounts for user", nickname = "getAccounts", notes = "Get all accounts for user", response = org.jsprt.assignment.model.Account.class, responseContainer = "List", tags = {"accounts",})
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "successful operation", response = Accounts.class, responseContainer = "List"),
+            @ApiResponse(code = 200, message = "successful operation", response = org.jsprt.assignment.model.Account.class, responseContainer = "List"),
             @ApiResponse(code = 400, message = "Invalid Customer ID supplied"),
             @ApiResponse(code = 404, message = "Customer not found"),
             @ApiResponse(code = 405, message = "Customer not active")})
     @RequestMapping(value = "/customers/{id}/accounts",
             produces = {"application/json"},
             method = RequestMethod.GET)
-    public ResponseEntity<List<Accounts>> getAccounts(@ApiParam(value = "Customer identifier number", required = true) @PathVariable("id") String id) {
+    public ResponseEntity<List<org.jsprt.assignment.model.Account>> getAccounts(@ApiParam(value = "Customer identifier number", required = true) @PathVariable("id") String id) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
     }
 
